# obdii-ford-garage

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/skills/: README.md
.github/workflows/: ci.yml
docs/: can-ecosystem.md  uv-vs-pip.html
src/obd_garage/: __init__.py  cli.py  config.py  diagnostics.py  logger.py  obd_client.py  snapshot.py  storage.py
tests/: test_config.py  test_serialize.py
vehicles/: bmw-535xi-2012.toml  example.toml  jeep-grand-cherokee-altitude-2020.toml
