[project]
name = "obdii-ford-garage"
version = "0.1.0"
description = "Offline OBD-II capture + logging for a multi-make garage, with optional Azure Blob upload."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "12lholt" }]
keywords = ["obd", "obd-ii", "elm327", "diagnostics", "azure"]

dependencies = [
    "obd>=0.7.2",
]

[project.optional-dependencies]
# Azure upload is optional so the at-the-car logger has the smallest footprint.
azure = [
    "azure-storage-blob>=12.20",
    "azure-identity>=1.17",
]

[project.scripts]
garage = "obd_garage.cli:main"

[project.urls]
Repository = "https://github.com/12lholt/obdii-ford-garage"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obd_garage"]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.3",
    "pre-commit>=4.0",
    # Pulled in so `garage upload` and its tests resolve in dev without the extra.
    "azure-storage-blob>=12.20",
    "azure-identity>=1.17",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
# A sensible, modern default set: pyflakes, pycodestyle, isort, pyupgrade, bugbear, comprehensions.
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.ruff.lint.isort]
known-first-party = ["obd_garage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
